# fpo-control

./: .gitignore  .gitmodules  README.md
manipulation_experiments/: .gitignore  README.md  eval_checkpoint.py  finetune_online_rl.py  fpo_experiments_summary.md  plot_results.py  pretrain_flow_bc.py  pyproject.toml  setup_env.sh  source_env.sh
manipulation_experiments/docs/: reproduce.md
manipulation_experiments/scripts/: FigA7.bash  eval_base_policies.sh  run_checkpoint_ablation.sh  run_fpo_ablation.sh  run_main_benchmark.sh  run_main_benchmark_dppo.sh  run_main_benchmark_init.sh  run_pretrain_base_policies.sh  run_pretrain_base_policies_dppo.sh
manipulation_experiments/scripts/skypilot/: launch_checkpoint_ablation.sh  launch_eval_base_policies.sh  launch_fpo_ablation.sh  launch_main_benchmark.sh  launch_pretrain_base_policies.sh
manipulation_experiments/scripts/sweeps/: dec25_finetune_fpo_boxcleaning_base_uul2gclip25.yaml  dec25_finetune_fpo_can_base_uul2gclip25.yaml  dec25_finetune_fpo_square_base_uul2gclip25.yaml  dec25_finetune_fpo_threading_base_uul2gclip25.yaml  dec25_finetune_fpo_tray_base_uul2gclip25.yaml  dec27_finetune_vanilla_fpo_boxcleaning_base_uul2gclip25.yaml  dec27_finetune_vanilla_fpo_can_base_uul2gclip25.yaml  dec27_finetune_vanilla_fpo_square_base_uul2gclip25.yaml  dec27_finetune_vanilla_fpo_threading_base_uul2gclip25.yaml  dec28_finetune_dppo_can_base_uul2gclip25.yaml  (+17 more)
manipulation_experiments/src/: dexmg_env.py  flow_model.py  flow_model_config.py  flow_net_mlp.py  flow_net_residual_mlp.py  flow_net_unet.py  noise_injection_network.py  vit.py
(+5 files in other folders)
