[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "far-manipulation-fpo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "wandb",
    "numpy",
    "tyro",
    "termcolor",
    "imageio",
    "safetensors",
    "Pillow",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
